# IUCBot

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  router.rs
src/client/: aksis.rs  mod.rs  obs.rs
src/pages/: login.rs  mod.rs
src/pages/dashboard/: ders_alma.rs  ders_notlari.rs  mod.rs  ozluk_bilgileri.rs
