[package]
name = "iuc-bot"
version = "0.1.0"
edition = "2024"
default-run = "iuc-bot"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "json", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
scraper = "0.18"
once_cell = "1.19"
dashmap = "5.5"
futures = "0.3"

crossterm = "0.27"
ratatui = "0.20"
log = "0.4.29"
simplelog = "0.12.2"
